maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:34: error: not found: value hauteurdepart
   if(aMurNord(largeurDepart,hauteurDepart+1)== false && hauteurdepart+1 <= hauteur)
                                                         ^ShortestPathMaze:39: error: not found: value &&
  if(aMurOuest(largeurDepart+1,hauteurDepart)== false &&  && largeurDepart+1 <= largeur)
                                                          ^